--- a/flamerelay/templates/backend/unit.html
+++ b/flamerelay/templates/backend/unit.html
@@ -2,8 +2,17 @@
 {% block content %}
 
 
-Unit = {{ unit }}
+<h1>{{ unit }}</h1>
+<div class="row">
+    <div class="col-md-12">
+        <div class="btn-group pull-right">
+            <a href="" class="btn btn-success">Subscribe</a>
+            <a href="" class="btn btn-primary">New Checkin</a>
+        </div>
+    </div>
+</div    >
 
-map = {{ map_html | safe}}
+
+{{ map_html | safe}}
 
 {% endblock %}
