Add checkin creation page

--- a/flamerelay/templates/base.html
+++ b/flamerelay/templates/base.html
@@ -31,7 +31,8 @@
       <script defer src="{% static 'js/project.js' %}"></script>
 
     {% endblock javascript %}
-
+    {% block extra_head %}
+    {% endblock extra_head %}
   </head>
 
   <body>
