--- a/flamerelay/templates/backend/unit.html
+++ b/flamerelay/templates/backend/unit.html
@@ -7,7 +7,7 @@
     <div class="col-md-12">
         <div class="btn-group pull-right">
             <a href="" class="btn btn-success">Subscribe</a>
-            <a href="" class="btn btn-primary">New Checkin</a>
+            <a href={% url 'backend:checkin'  unit.identifier  %} class="btn btn-primary">New Checkin</a>
         </div>
     </div>
 </div    >
