--- a/flamerelay/templates/backend/unit.html
+++ b/flamerelay/templates/backend/unit.html
@@ -1,18 +1,37 @@
 {% extends "base.html" %}
 {% block content %}
-
-
-<h1>{{ unit }}</h1>
-<div class="row">
-    <div class="col-md-12">
-        <div class="btn-group pull-right">
-            <a href="" class="btn btn-success">Subscribe</a>
-            <a href={% url 'backend:checkin'  unit.identifier  %} class="btn btn-primary">New Checkin</a>
+    <h1>{{ unit }}</h1>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="btn-group pull-right">
+                {% if request.user in unit.subscribers.all %}
+                    <a href="?action=unsubscribe" class="btn btn-danger">Unsubscribe</a>
+                {% else %}
+                    <a href="?action=subscribe" class="btn btn-success">Subscribe</a>
+                {% endif %}
+                <a href="{% url 'backend:checkin'  unit.identifier  %}"
+                   class="btn btn-primary">New Checkin</a>
+            </div>
         </div>
     </div>
-</div    >
-
-
-{{ map_html | safe}}
-
+    <hr>
+    <p>Subscriber count : {{ unit.subscribers.count }}</p>
+    <p>Checkin count : {{ unit.checkin_set.count }}</p>
+    <p>Distance Travelled : {{ unit.get_distance_travelled }}km</p>
+    <hr>
+    <div class="row">
+        <div class="col-sm-4">
+            <h3>Travel log:</h3>
+            {% for checkin in unit.checkin_set.all %}
+                {% comment %} <li>{{ checkin }}</li> {% endcomment %}
+                <b>{{ checkin.city }}, {{ checkin.date_created|date:"d.m.Y" }}</b>
+                <p>
+                    {{ checkin.message|default:"<i>No message</i>" }}
+                </p>
+                {% if checkin.image %}<img src={{ checkin.image }} class="img-fluid">{% endif %}
+                <hr>
+            {% endfor %}
+        </div>
+        <div class="col-sm-8">{{ map_html | safe }}</div>
+    </div>
 {% endblock %}
