little about page

--- a/flamerelay/templates/pages/about.html
+++ b/flamerelay/templates/pages/about.html
@@ -1,2 +1,22 @@
 {% extends "base.html" %}
-{% block content %}About{% endblock %}
+{% block content %}
+    <h1>About</h1>
+    <h2>Why?</h2>
+    <p>Because I wanted to. I'm funemployed.</p>
+    <h2>How?</h2>
+    <p>
+        <a href="https://github.com/jvacek/flamerelay">GitHub repo</a>
+    </p>
+    <h2>Who?</h2>
+    <p>jvacek@pm.me</p>
+    <h2>Can I give you money?</h2>
+    <p>
+        Sure, these lighters don't grow on trees. <a href="https://github.com/sponsors/jvacek">Here's a link</a>
+    </p>
+    <h2>Is it secure?</h2>
+    <p>
+        At no point should anyone be able to get anything identifiable from the site.
+        I use accounts to prevent abuse, but other than that I avoid storing any personal information.
+        The EXIF info on the images should be washed out, and the location is manually input by you.
+    </p>
+{% endblock %}
