update homepage, djlint

--- a/flamerelay/templates/pages/about.html
+++ b/flamerelay/templates/pages/about.html
@@ -7,7 +7,9 @@
         <a href="https://github.com/jvacek/flamerelay">GitHub repo</a>
     </p>
     <h1>Who?</h1>
-    <p><a id="contact" href="">Send me an Email</a> or reach me via <a href="https://fosstodon.org/@jvacek">@jvacek@fosstodon.org</a></p>
+    <p>
+        <a id="contact" href="">Send me an Email</a> or reach me via <a href="https://fosstodon.org/@jvacek">@jvacek@fosstodon.org</a>
+    </p>
     <h1>Can I give you money?</h1>
     <p>
         Sure, these lighters don't grow on trees. <a href="https://github.com/sponsors/jvacek">Here's a link</a>
