--- a/flamerelay/templates/backend/unit.html
+++ b/flamerelay/templates/backend/unit.html
@@ -2,6 +2,17 @@
 {% block content %}
     <h1>{{ unit }}</h1>
     <div class="row">
+        <div class="col-sm-3">
+            <p>Distance Travelled : {{ unit.get_distance_travelled }}km</p>
+        </div>
+        <div class="col-sm-3">
+            <p>Checkin count : {{ unit.checkin_set.count }}</p>
+        </div>
+        <div class="col-sm-3">
+            <p>Subscriber count : {{ unit.subscribers.count }}</p>
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-12">
             <div class="btn-group pull-right">
                 {% if request.user in unit.subscribers.all %}
@@ -14,11 +25,6 @@
             </div>
         </div>
     </div>
-    <hr>
-    <p>Subscriber count : {{ unit.subscribers.count }}</p>
-    <p>Checkin count : {{ unit.checkin_set.count }}</p>
-    <p>Distance Travelled : {{ unit.get_distance_travelled }}km</p>
-    <hr>
     <div class="row">
         <div class="col-sm-4">
             <h3>Travel log:</h3>
