--- a/flamerelay/templates/backend/checkin_create.html
+++ b/flamerelay/templates/backend/checkin_create.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block extra_head %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>{{ form.media }}
-{% endblock %}
+{% endblock extra_head %}
 {% load crispy_forms_tags %}
 {% block content %}
   <h2>Create a new Check-in</h2>
@@ -18,4 +18,4 @@
     {% crispy form %}
     <input type="submit" class="btn btn-primary" value="Submit">
   </form>
-{% endblock %}
+{% endblock content %}
