Shorten the warning message

--- a/flamerelay/templates/pages/home.html
+++ b/flamerelay/templates/pages/home.html
@@ -2,7 +2,7 @@
 {% block content %}
   <h1>FlameRelay</h1>
   <div class="p-3 mb-2 bg-warning text-dark">
-    FYI this is very much an alpha version of the site. It's not very pretty, but it kinda does what it should, and it's a start!
+    FYI This is an early version. Bugs or feature suggestions? Check the <a href="{% url 'about' %}">About page</a> for GitHub/contact info.
   </div>
   <!-- Chat GPT JS here we go lol -->
   <div class="row">
