--- a/flamerelay/templates/backend/checkin_create.html
+++ b/flamerelay/templates/backend/checkin_create.html
@@ -13,7 +13,7 @@
   </p>
   <hr>
   {% load crispy_forms_tags %}
-  <form method="post">
+  <form method="post" enctype='multipart/form-data'>
     {% csrf_token %}
     {% crispy form %}
     <input type="submit" class="btn btn-primary" value="Submit">
